 Fixes and new features compared to iSCSI target distributed with OpenSolaris
 ============================================================================

Version 10

o Remove hardware accelerated CRC32 calculation. There are situation
  when it produces wrong results.

 
Version 9

o Provide option (-X/--replace-lun) to replace existing LU with the new one
  when calling "iscsitadm create target"


Version 8

o Allow setting the iSCSI target name (-n/--iqn) instead of generating
  default iqn.1986-03.com.sun:02:<UUID>
o Allow setting CHAP secrets from command line, rather than entering them
  interactively
o Provide option (-x/--skip-bs-validation) that disables all the backing
  store checks during the target creation


Version 7

o Allow setting maxrecv, TPGT and ACL during target creation
o Fix issue with incorrect PRODUCT ID initialization when no GUID is set


Version 6

o Allow setting many additional SCSI parameters during LU creation
        SCSI Vendor ID (-V)
        SCSI Product ID (-O)
        SCSI3 GUID (-G)
        Disk geometry - CHS (-c, -h, -k)
        Disk RPM (-M)
        Disk BPS (-B)
        Disk interleave (-L)


Version 5

o fix persistent reservation problem after iscsitgtd restart

o fix persistent reservation key mismatch when loading PGR data
o fix return w/o unlocking mutex in spc_pr_out_register()
  when checking for reservation conflict


Version 4

o Allow changing LU capacity (size) even in case the backing store is not a
  regular file (i.e. a block device)


Version 3

o fix persistent reservation problem after iscsitgtd restart


Version 2

o option to set reported iSNS entity nodename
  iscsitadm modify admin -e nodename

o fix issue with iSNS connection not being established due to async connect()
  erroneously returning -1  (errno == 0)