@@ -28,7 +28,7 @@ CATEGORY="system"
 BASEDIR=/
 CLASSES="manifest none rbac"
 DESC="Solaris Legacy iSCSI Target"
-VERSION="10,REV=2010.12.21"
+VERSION="11,REV=2011.01.19"
 VENDOR="Grigale Ltd."
 HOTLINE="Please contact your local service provider"
 EMAIL="support@grigale.com"
